# tinyengine

./: .gitignore
code_generator/: CodeGenerator.py  GeneralMemoryScheduler.py  TfliteConvertor.py  constant.py
code_generator/converters/tflite_parser/: __init__.py  avgpool.py  batch_matmul.py  concatenation.py  fully_connected.py  gather.py  mul.py  pack.py  quantize.py  strided_slice.py  utils.py
code_generator/operators/: add.py  add1d.py  avgpool2d.py  basic_utils.py  batch_matmul.py  bias_add.py  bias_update.py  cast.py  collapse_sum_like.py  concatenation.py  conv2d.py  dense.py  depthwiseConv2d.py  div.py  exp.py  fully_connected.py  gather.py  greater.py  group_conv2d.py  less.py  log_softmax.py  mat_mul.py  maxpool2d.py  mul.py  negative.py  nll_loss.py  pack.py  permute_4D_3012.py  permute_groupconv_out.py  placeholder_for_greater_op_codes.py  quantize.py  reduce_prod.py  relu.py  reshape.py  reshape_like.py  rsqrt.py  se_element_mult.py  shape.py  softmax.py  squared_difference.py  (+9 more)
examples/: vww.py
experimental/vit/kernel/: test  test.cpp
experimental/vit/tflite/: CMakeLists.txt  tflite.cpp
